force-app/main/default/objects/Release_Team__c/Release_Team__c.object-meta.xml
<CustomObject>
    <label>Release Team</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Release Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>