force-app/main/default/objects/Release_Team__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field used for Release Team Object.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>