force-app/main/default/objects/Release_Team__c/fields/Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Count__c</fullName>
    <description>This field used for Release Team Object.</description>
    <label>Assignment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>