force-app/main/default/objects/Release_Team__c/fields/Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned__c</fullName>
    <description>This field Used for Release Team Object.</description>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>