force-app/main/default/objects/Release_Team__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used for Release Team Object.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>